fix: update buttons on service area to link. added padding on mobile

--- a/src/tjenesteomrader/components/entrance/entrance.module.css
+++ b/src/tjenesteomrader/components/entrance/entrance.module.css
@@ -23,11 +23,13 @@
   margin-top: 1.5rem;
 }
 
-.serviceArea__bottom button {
+.serviceArea__bottom a {
   padding-inline: 1rem;
-  height: calc(+2rem);
+  width: fit-content;
+  padding-block: 0.25rem;
   border: none;
   border-radius: 4rem;
+  text-decoration: none;
 }
 
 /* Styling for Even child */
@@ -48,16 +50,16 @@
   text-align: end;
 }
 
-.serviceArea:nth-child(even) .serviceArea__bottom button {
-  float: right;
-}
-
-@media (max-width: 800px) {
-  .serviceArea__bottom {
-  }
+.serviceArea:nth-child(even) .serviceArea__bottom a {
+  margin-right: 0;
+  margin-left: auto;
 }
 
 @media (max-width: 550px) {
+  .serviceArea {
+    padding: 1.5rem;
+  }
+
   .serviceArea__top {
     flex-direction: column;
   }
@@ -82,6 +84,7 @@
 
   .serviceArea:nth-child(even) .serviceArea__top h3 {
     width: 100%;
+    text-align: start;
   }
 
   .serviceArea:nth-child(even) img {
@@ -93,7 +96,7 @@
     text-align: start;
   }
 
-  .serviceArea:nth-child(even) .serviceArea__bottom button {
-    float: left;
+  .serviceArea:nth-child(even) .serviceArea__bottom a {
+    margin-left: 0;
   }
 }
